# OOP

./: CMakeLists.txt  README.md  main.cpp  tastatura.txt
.github/actions/create-release/: action.yml
.github/workflows/: cmake.yml  main.yml
scripts/: tastatura.txt
